--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ function hi()
 <a href="index.html"><li>Home</li></a>
 <a href="about.html"><li>About Us</li></a>
 <a href="service.html"><li>All Categories</li></a>
-<a href="#" onclick="hi();"><li  style="color:#FF4000">Gallery</li></a>
+<a href="gallery.html"><li  style="color:#FF4000">Gallery</li></a>
 <a href="contact.html"><li>Contact Us</li></a>
 </ul>
 
